--- a/VisualStudioPage.xaml
+++ b/VisualStudioPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:VisualStudio" x:Class="VisualStudio.VisualStudioPage">
 
-    <Label Text="for testing github" VerticalOptions="Center" HorizontalOptions="Center" />
+    <Label Text="for testing github again" VerticalOptions="Center" HorizontalOptions="Center" />
     
 </ContentPage>
